--- a/index.html
+++ b/index.html
@@ -22,21 +22,28 @@
         <div class="tier">
             <h3>Primordial Architects</h3>
             <p><strong>Moon Presence:</strong> Master of the Hunter’s Dream, a paleblood puppeteer.</p>
+            <img src="/Users/davidliao/Desktop/bb lore/bb-lore/images/moon precense.webp" alt="Moon Presence descending" width="300">
             <p><strong>Kos:</strong> A primal force, her death birthed the Nightmare.</p>
+            <img src="images/The_corpse_of_Kos.webp" alt="Kos on the shore" width="300">
         </div>
         <div class="tier">
             <h3>Intermediaries</h3>
             <p><strong>Ebrietas:</strong> Daughter of the Cosmos, blood’s cosmic muse.</p>
+            <img src="images/ebrietas.webp" alt="Ebrietas in the altar" width="300">
             <p><strong>Mergo:</strong> Infant of nightmare, its cries summon the Blood Moon.</p>
+            <img src="images/Mergo.webp" alt="Mergo’s nightmare crib" width="300">
         </div>
         <div class="tier">
             <h3>Guardians & Enforcers</h3>
             <p><strong>Amygdala:</strong> Watchers of the unseen, many-eyed sentinels.</p>
+            <img src="images/amygdala2.webp" alt="Amygdala looming" width="300">
             <p><strong>Wet Nurse:</strong> Shadowy protector of Mergo’s crib.</p>
+            <img src="images/wetnurse.png" alt="Wet Nurse in shadow" width="300">
         </div>
         <div class="tier">
             <h3>Offspring</h3>
             <p><strong>Orphan of Kos:</strong> A wailing child of chaos, bound to the sea.</p>
+            <img src="images/orphan of kos.webp" alt="Orphan by the sea" width="300">
         </div>
     </section>
 
