--- a/index.html
+++ b/index.html
@@ -3,47 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bloodborne Lore Hub</title>
+    <title>Cosmos & Sky - Bloodborne Lore</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Crimson+Text|Great+Vibes" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>The Sky and Cosmos Are One</h1>
+        <div class="logo">
+            <img src="images/hunters-mark-logo.png" alt="Cosmos & Sky Logo" width="100">
+            <span class="logo-text">Cosmos & Sky</span>
+        </div>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#great-ones">Great Ones</a>
-            <a href="#lore-vault">Lore Vault</a>
-            <a href="#forum">Forum</a>
+            <a href="lore.html">Lore</a>
+            <a href="forum.html">Forum</a>
         </nav>
     </header>
 
-    <section id="great-ones">
-        <h2>Great Ones Hierarchy</h2>
-        <div class="tier">
-            <h3>Primordial Architects</h3>
-            <p><strong>Moon Presence:</strong> Master of the Hunter’s Dream, a paleblood puppeteer.</p>
-            <img src="/Users/davidliao/Desktop/bb lore/bb-lore/images/moon precense.webp" alt="Moon Presence descending" width="300">
-            <p><strong>Kos:</strong> A primal force, her death birthed the Nightmare.</p>
-            <img src="images/The_corpse_of_Kos.webp" alt="Kos on the shore" width="300">
+    <section id="home">
+        <div class="welcome">
+            <h1>Welcome, Hunters</h1>
+            <p class="tagline">To Cosmos & Sky—unveil the secrets of Yharnam’s Great Ones.</p>
         </div>
-        <div class="tier">
-            <h3>Intermediaries</h3>
-            <p><strong>Ebrietas:</strong> Daughter of the Cosmos, blood’s cosmic muse.</p>
-            <img src="images/ebrietas.webp" alt="Ebrietas in the altar" width="300">
-            <p><strong>Mergo:</strong> Infant of nightmare, its cries summon the Blood Moon.</p>
-            <img src="images/Mergo.webp" alt="Mergo’s nightmare crib" width="300">
-        </div>
-        <div class="tier">
-            <h3>Guardians & Enforcers</h3>
-            <p><strong>Amygdala:</strong> Watchers of the unseen, many-eyed sentinels.</p>
-            <img src="images/amygdala2.webp" alt="Amygdala looming" width="300">
-            <p><strong>Wet Nurse:</strong> Shadowy protector of Mergo’s crib.</p>
-            <img src="images/wetnurse.png" alt="Wet Nurse in shadow" width="300">
-        </div>
-        <div class="tier">
-            <h3>Offspring</h3>
-            <p><strong>Orphan of Kos:</strong> A wailing child of chaos, bound to the sea.</p>
-            <img src="images/orphan of kos.webp" alt="Orphan by the sea" width="300">
+        <div class="anchor-image">
+            <img src="images/moon presence gif.webp" alt="Moon Presence descending over Yharnam" width="800">
         </div>
     </section>
 
