--- a/about.html
+++ b/about.html
@@ -27,13 +27,33 @@
     </header>
 
     <section id="about">
-        <h1>About the Hunt</h1>
-        <p class="tagline">A sanctum for those who seek the truth of Yharnam.</p>
+        <div class="blood-drip"></div>
+        <div class="hunter-silhouette">
+            <img src="images/hunter-silhouette.png" alt="Hunter in shadow">
+        </div>
+        <h1><img src="images/hunters-mark-logo.png" alt="Mark" class="icon"> Echoes of the Old Blood</h1>
+        <p class="tagline">Born in Yharnam’s shadows, Cosmos & Sky is a beacon for hunters lost to the dream.</p>
         
+        <div class="creed">
+            <h2><img src="images/blood-vial.png" alt="Vial" class="icon"> The Hunter’s Creed</h2>
+            <p>"We tread the night, blades in hand, seeking paleblood beneath the moon. Fear the old blood, yet embrace the hunt—for the cosmos calls."</p>
+        </div>
+
         <div class="contact-info">
-            <h2>Contact the Hunters</h2>
+            <h2><img src="images/hunters-mark-logo.png" alt="Mark" class="icon"> Contact the Hunters</h2>
             <p>13 Paleblood Way, Yharnam</p>
             <p>(666) 555-0131</p>
             <img src="images/yharnam-map.jpg" alt="Map of Yharnam" width="300">
             <div class="blood-echo">
-                <textarea placeholder="Send a Blood Echo..." rows="3"></textarea
+                <textarea placeholder="Send a Blood Echo..." rows="3"></textarea>
+                <button>Submit</button>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>Built by a Hunter, for Hunters | 2025</p>
+    </footer>
+
+    <script>
+        function toggle
