--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="article-week fade-in">
             <h2>Article of the Week</h2>
             <h3>The Moon’s Pale Embrace</h3>
-            <p>Delving into the Moon Presence’s role...</p>
+            <p>Delving into the Moon Presence’s role in the Hunter’s Dream—a puppetmaster or a savior? Explore the paleblood mystery...</p>
             <a href="#" class="read-more">Read More</a>
         </div>
         <div class="insight-counter fade-in">
@@ -54,14 +54,21 @@
     </section>
 
     <footer>
-        <p>Built by a Hunter, for Hunters | 2025</p>
+        <div class="contact-info">
+            <h2><img src="images/eye-rune.png" alt="Eye Rune" class="icon"> Contact the Hunters</h2>
+            <p>13 Paleblood Way, Yharnam</p>
+            <p>(666) 555-0131</p>
+            <img src="images/yharnam-map.jpg" alt="Map of Yharnam" width="300">
+        </div>
     </footer>
 
     <script>
         const quotes = [
             "The sky and the cosmos are one.",
             "Fear the old blood.",
-            "Grant us eyes, grant us eyes!"
+            "Grant us eyes, grant us eyes!",
+            "Seek paleblood to transcend the hunt.",
+            "The night, and the dream, were long..."
         ];
         const content = quotes.concat([
             "Moon Presence: Master of the Dream.",
