--- a/lore.html
+++ b/lore.html
@@ -40,7 +40,12 @@
     </section>
 
     <footer>
-        <p>Built by a Hunter, for Hunters | 2025</p>
+        <div class="contact-info">
+            <h2><img src="images/eye-rune.png" alt="Eye Rune" class="icon"> Contact the Hunters</h2>
+            <p>13 Paleblood Way, Yharnam</p>
+            <p>(666) 555-0131</p>
+            <img src="images/yharnam-map.jpg" alt="Map of Yharnam" width="300">
+        </div>
     </footer>
 
     <script>
